--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@ setTimeout(function(){top.location=document.location;}, 30000)
 </head>
 
 <body id="t" class="offline main-page">
+	<header id="main-frame-error" class="interstitial-wrapper __wrapper">
+		<div id="main-content">
+			<h1>T-Rex Chrome Offline Game — Dino Runner Online</h1>
+			<h2>Google Dinosaur Record</h2>
+			<p>This replica can be played on Chrome, FireFox, Safari and mobile devices.<br />
+Press Space to start the game and jump your Dino, use down arrow (↓) to duck.</p>
+		
+		</div>
+	</header>
 <section id="offline-resources">
 	<img id="offline-resources-1x" src="/assets/offline-sprite-1x.png" alt="Dino Chrome Online Game Sprite 1">
 	<img id="offline-resources-2x" src="/assets/offline-sprite-2x.png" alt="Dino Chrome Online Game Sprite 2">
