--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@ setTimeout(function(){top.location=document.location;}, 30000)
 	<img id="offline-resources-1x" src="/assets/offline-sprite-1x.png" alt="Dino Chrome Online Game Sprite 1">
 	<img id="offline-resources-2x" src="/assets/offline-sprite-2x.png" alt="Dino Chrome Online Game Sprite 2">
 </section>
-	<script src="/js/game?ver=1.js"></script>
+	<script src="/js_1/game?ver=1.js"></script>
 </body>
 </html>
