flappy bird init

--- a/index.html
+++ b/index.html
@@ -1,33 +1,28 @@
-<!doctype html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="Cache-control" content="public">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
-	<title>T-Rex Chrome Offline Game — Dino Runner Online</title>
-		<style>
-	/* Copyright 2013 The Chromium Authors. All rights reserved. * Use of this source code is governed by a BSD-style license that can be * found in the LICENSE file. */html,body{ padding: 0; margin: 0; width: 100%; height: 100%;}.icon { -webkit-user-select: none; display: inline-block;}.icon-offline { content: -webkit-image-set( url(default_100_percent/offline/100-error-offline.png) 1x, url(default_200_percent/offline/200-error-offline.png) 2x); position: relative;}.hidden { display: none;}/* Offline page */.offline .interstitial-wrapper { color: #2b2b2b; font-size: 1em; line-height: 1.55; margin: 0 auto; max-width: 600px; padding-top: 100px; width: 100%;}.offline .runner-container { height: 150px; max-width: 600px; overflow: hidden; position: absolute; top: 35px; width: 44px;}.offline .runner-canvas { height: 150px; max-width: 600px; opacity: 1; overflow: hidden; position: absolute; top: 0; z-index: 2;}.offline .controller { background: rgba(247,247,247, .1); height: 100vh; left: 0; position: absolute; top: 0; width: 100vw; z-index: 1;}#offline-resources { display: none;}/**** Custom Beginning ***/body { font-family: Open Sans;}a { color: #000;}body.black-page .interstitial-wrapper { color: #ddd;}body.black-page .high-scores { color: #bbb;}body.black-page .other-versions ul li a { color: #ccc;}body.mario-page { background: rgb(117, 165, 249);}body.mario-page .interstitial-wrapper { color: #fff;}body.mario-page .high-scores { color: #fff;}body.mario-page .other-versions ul li a { color: #fff;}ul { margin: 0; padding: 0; list-style: none;}.__wrapper { width: auto; max-width: 516px; margin-left: auto; margin-right: auto;}#main-content { margin: 0; padding: 0 20px;}#main-content h1 { margin: 0 0 20px; font-size: 20px; text-align: center; font-weight: normal;}#main-content h2 { display: none;}#main-content p { margin: 0 0 10px; font-size: 15px; text-align: center;}/*.ya-share2 { margin: 0 auto 48px; text-align: center;}*/.social-buttons { margin: 0 auto 48px; text-align: center; overflow: hidden;}.social-buttons ul { display: inline-block;}.social-buttons ul li { float: left; margin: 0 3px;}.social-buttons ul li img { border-radius: 4px;}.social-buttons ul li.fb img { background: #3b5998;}.social-buttons ul li.gp img { background: #dc4e41;}.social-buttons ul li.tw img { background: #00aced;}.high-scores { color: #767676; margin-bottom: 48px; display: inline-block; vertical-align: top; max-width: 290px;}.high-scores:first-child { margin-right: 50px;}@media (max-width: 520px) { .high-scores { margin: 0 auto 48px; } .high-scores:first-child { margin-right: auto; }}.high-scores .headline { margin: 0 0 14px; font-size: 13px; font-weight: bold; text-align: center;}.high-scores ul { width: 230px; margin: 0 auto; padding: 0;}.high-scores ul li { margin: 0 0 3px; font-size: 13px; overflow: hidden;}.high-scores ul li span.user { float: left; max-width: 180px;}.high-scores ul li span.result { float: right;}.offline .interstitial-wrapper { margin-bottom: 90px; padding-top: 48px;}.offline .runner-container,.offline .runner-canvas { position: relative;}.other-versions { margin-bottom: 30px; text-align: center;}.other-versions ul { display: inline-block; margin: 0 0 40px;}.other-versions ul li { float: left; margin: 0 5px; text-align: center;}.other-versions ul li img { display: block;}.other-versions ul li a { font-size: 12px; font-weight: bold; text-decoration: none;}footer .copyright { color: #444; margin: 0 10px; font-size: 12px;}/**** Custom Ending ***/@media (max-width: 420px) { .suggested-left > #control-buttons, .suggested-right > #control-buttons { float: none; } .snackbar { left: 0; bottom: 0; width: 100%; border-radius: 0; }}@media (max-height: 350px) { h1 { margin: 0 0 15px; } .icon-offline { margin: 0 0 10px; } .interstitial-wrapper { margin-top: 5%; } .nav-wrapper { margin-top: 30px; }}@media (min-width: 600px) and (max-width: 736px) and (orientation: landscape) { .offline .interstitial-wrapper { margin-left: 0; margin-right: 0; }}@media (min-width: 420px) and (max-width: 736px) and (min-height: 240px) and (max-height: 420px) and (orientation:landscape) { .interstitial-wrapper { margin-bottom: 100px; }}@media (min-height: 240px) and (orientation: landscape) { .offline .interstitial-wrapper { margin-bottom: 90px; } .icon-offline { margin-bottom: 20px; }}@media (max-height: 320px) and (orientation: landscape) { .icon-offline { margin-bottom: 0; } .offline .runner-container { top: 10px; }}@media (max-width: 240px) { button { padding-left: 12px; padding-right: 12px; } .interstitial-wrapper { overflow: inherit; padding: 0 8px; }}@media (max-width: 120px) { button { width: auto; }}	</style>
+  <meta charset="UTF-8">
 
-	<script>
-		var user_name = '';
-			</script>
-	<script type="text/javascript"> 
-if(self != top) 
-{ 
-setTimeout(function(){top.location=document.location;}, 30000)  
-} 
-</script>
+  <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
+  <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
+  <script language="javascript" type="text/javascript" src="bird.js"></script>
+  <script language="javascript" type="text/javascript" src="pipe.js"></script>
+  <script language="javascript" type="text/javascript" src="sketch_180817b.js"></script>
+  <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
+
+  <!-- This line removes any default padding and style. 
+       You might only need one of these values set. -->
+  <style> 
+    body {
+      padding: 100px auto; 
+      margin: 0;
+    } 
+    canvas {
+      border: 1px solid black;
+      margin: 100px;
+    }
+  </style>
 </head>
 
-<body id="t" class="offline main-page">
-	<header id="main-frame-error" class="interstitial-wrapper __wrapper">
-		<div id="main-content">
-		</div>
-	</header>
-<section id="offline-resources">
-	<img id="offline-resources-1x" src="assets/offline-sprite-1x.png" alt="Dino Chrome Online Game Sprite 1">
-	<img id="offline-resources-2x" src="assets/offline-sprite-2x.png" alt="Dino Chrome Online Game Sprite 2">
-</section>
-	<script src="game.js"></script>
+<body>
 </body>
 </html>
